--- a/_data/2023/accra/location.yml
+++ b/_data/2023/accra/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/accra.jpg
+image: /assets/images/sicss_accra.jpeg
 title: Accra
 subtitle: University of Ghana
 description: "August 13 to August 26, 2023"
