--- a/_data/2022/paris/faculty.yml
+++ b/_data/2022/paris/faculty.yml
@@ -1,5 +1,5 @@
 - name: Etienne Ollion
-  image: /assets/images/etienne_ollion.png
+  image: /assets/images/etienne_ollion.jpeg
   bio: Étienne Ollion is a CNRS research fellow and Professor of Sociology at École Polytechnique. His research focuses on politics, and he integrates digital data to more classic data sources and methods.
   website: www.ollion.cnrs.fr
   
