--- a/_data/2023/beijing/faculty.yml
+++ b/_data/2023/beijing/faculty.yml
@@ -1,1 +1,13 @@
+- name: "TA NA"
+  image: assets/images/01 bejing_2023_faculty_tana.png
+  bio: "TA Na 塔娜 is an associate professor at the School of Journalism and Communication at the Renmin University of China. She got her Ph.D. degree in Computer Science and Technology from Tsinghua University. Her research interests include online social networks, platformization and new media, computational communication, and intelligent communication (algorithms, agents, etc.). Her research has been published in journals of multiple disciplinaries including computer science, communication, psychology and others. She can be reached via tanayun@ruc.edu.cn. "  
+  website: http://jcr.ruc.edu.cn/zw/jzyg/js/b78e121667fe4590bd307962c9dcfa7b.htm
+  
+- name: "Yiyan Zhang"
+  image: assets/images/02 beijing_2023_faculty_yiyan.png
+  bio: "Yiyan Zhang 张伊妍 is an assistant professor at the School of Journalism and Communication at the Renmin University of China. She got her Ph.D. degree in Emerging Media Studies from Boston University and her bachelor's degree in advertising and economy from Peking University Her research focuses on mediated and dynamic communication effects between citizens, news media, and government bodies on emerging media in the global contexts. Yiyan’s previous studies connect a large variety of computational methods, especially natural language processing, online survey, and social network analysis. Her research has been published in journals including but not limited to Communication Research, Information, Communication & Society, Journalism Studies, International Journal of Communication, The Social Science Journal, and Mass Communication and Society."
+  website: https://yiyanzhang.com/
+  
 - name: 
+  image:
+  bio:
