--- a/_data/2023/paris/faculty.yml
+++ b/_data/2023/paris/faculty.yml
@@ -3,7 +3,7 @@
   bio: Étienne Ollion is a CNRS research fellow and Professor of Sociology at École Polytechnique. His research focuses on politics, and he integrates digital data to more classic data sources and methods.
   website: www.ollion.cnrs.fr
   
-- name: Germain Gauthier
+- name: Julien Boelaert
   image: /2019/ethzurich/images/julien_boelaert.png
   bio: Julien Boelaert is an Assistant professor in Political Science at Lille University/CERAPS (currently on sabbatical). He has been experimenting with, and thinking about, machine learning for social sciences since 2010 and is currently working on mass-media content analysis with a text-as-data approach.
   website: https://pro.univ-lille.fr/julien-boelaert
