--- a/_data/2023/howard-mathematica/hero.yml
+++ b/_data/2023/howard-mathematica/hero.yml
@@ -1,2 +1,2 @@
-header_2: "Dates TBD, 2023 | Howard University"
+header_2: "July 15 to July 28, 2023 | Howard University | Virtual Event"
 location: "SICSS-Howard/Mathematica"
