--- a/_data/2023/howard-mathematica/location.yml
+++ b/_data/2023/howard-mathematica/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/howard.jpg
 title: Howard/Mathematica
 subtitle: Howard University
-description: "Dates TBD, 2023"
+description: "July 15 to July 28, 2023"
 link: howard-mathematica
 year: 2023
