Add Katherine for varyCSS pre-tape

--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -219,7 +219,9 @@
     
         - [Christen A. Smith, Ph.D.](https://liberalarts.utexas.edu/anthropology/faculty/cs23775), Associate Professor, African and African Diaspora Studies and Anthropology & Director, Center for Women’s and Gender Studies, The University of Texas at Austin
       
-        - [Gabriel Varela](https://scholars.duke.edu/display/per7030532), Ph.D. Candidate, Sociology Department, Duke University"
+        - [Gabriel Varela](https://scholars.duke.edu/display/per7030532), Ph.D. Candidate, Sociology Department, Duke University
+        
+        - [Katherine Zaslavsky](https://sociology.cornell.edu/grad-students), Ph.D. Candidate, Sociology Department, Cornell University"
       
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:30 Group Exercise Continuation: Predict Features of Tweets Associated with Retweets and Produce Visualization (*Zoom*) OR Content-Specific Office Hours with Mathematica TAs (as needed) (*Zoom*)"
