--- a/_data/2023/paris/teaching_assistants.yml
+++ b/_data/2023/paris/teaching_assistants.yml
@@ -1,1 +1,4 @@
-- name:
+- name: Gaston Vermersch
+  image: /assets/images/gaston_vermersch.jpeg
+  bio: Gaston Vermersch is a research assistant of Étienne Ollion at CREST. He holds an M.Sc. in quantitative economics from the Ecole Normale Supérieure de Lyon and is achieving an M.Sc. in computational social sciences at ENSAE. He wishes to learn new digital methods, complementary to econometrics, to analyze various socio-economic data.
+  website: 
