--- a/_data/2023/nyu-nyc/location.yml
+++ b/_data/2023/nyu-nyc/location.yml
@@ -1,5 +1,5 @@
-image: /assets/images/nyu.jpg
-title: NYU
+image: /assets/images/nyu_silver.jpg
+title: NYU Silver
 subtitle: New York University
 description: "June 20 to June 30, 2023"
 link: nyu-nyc
