--- a/_data/2023/paris/teaching_assistants.yml
+++ b/_data/2023/paris/teaching_assistants.yml
@@ -1,4 +1,10 @@
+- name: Yacine Chitour
+  image: /assets/images/yacine_chitour.jpg
+  bio: Yacine Chitour is a master's student in history and sociology at École Normale Supérieure. In 2022, he defended a master's thesis on digital labour and sex work, and the way they overlap on online platforms. He's currently working on research projects in economic sociology. 
+  website: 
+  
 - name: Gaston Vermersch
   image: /assets/images/gaston_vermersch.jpg
   bio: Gaston Vermersch is a research assistant of Étienne Ollion at CREST. He holds an M.Sc. in quantitative economics from the Ecole Normale Supérieure de Lyon and is achieving an M.Sc. in computational social sciences at ENSAE. He wishes to learn new digital methods, complementary to econometrics, to analyze various socio-economic data.
-  website: 
+  website:
+  
