SICSS-CALABAR faculty update 2

--- a/_data/2023/calabar/faculty.yml
+++ b/_data/2023/calabar/faculty.yml
@@ -7,14 +7,14 @@ website: https://www.linkedin.com/in/juliet-inyang/?originalSubdomain=ng
 
 
 - name: Grace Ihejiamaizu Paul-Anietie
-bio: "<p align='justify'>   </p>"
+bio: "<p align='justify'> Co-Founder Academic Hive for African Scholars  </p>"
 image: /assets/images/grace_ihejiamaizu.jpg
 website: https://about.me/graceihejiamaizu
 
 
 
 - name: Inyang, John Okiri
-bio: "<p align='justify'>   </p>"
+bio: "<p align='justify'> Lecturer, Department of Economics, University of Calabar  </p>"
 image: /assets/images/inyang_John.jpg
 website: https://www.unical.edu.ng/staff/user/profile-JohnInyang
 
@@ -28,14 +28,14 @@ website: https://www.linkedin.com/in/augustine-ogbaji-otobi-166756103/
 
 
 - name: Professor Bassey Igri Okon
-bio: "<p align='justify'>   </p>"
+bio: "<p align='justify'> Director of Research and Development, University of Calabar  </p>"
 image: /assets/images/Bassey_Igri.jpg
 website: https://www.unical.edu.ng/staff/user/profilebasseyokon-2
 
 
 
 - name: Professor Joseph Eyo Duke
-bio: "<p align='justify'>   </p>"
+bio: "<p align='justify'> Dean, Faculty of Management Sciences, University of Calabar </p>"
 image: /assets/images/Joseph_Eyo.jpg
 website: https://www.unical.edu.ng/staff/user/profiledukeeyo
 
@@ -44,7 +44,7 @@ website: https://www.unical.edu.ng/staff/user/profiledukeeyo
 
 
 - name: Professor Mbe Nja
-bio: "<p align='justify'>   </p>"
+bio: "<p align='justify'> Professor of Statistics.  Director, Centrefor Teaching andLearning, University of Calabar  </p>"
 image: /assets/images/Mbe_Nja.jpg
 website: https://www.linkedin.com/in/mbe-nja-866ab41b/
 
