--- a/_data/2023/beijing/location.yml
+++ b/_data/2023/beijing/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/beijing.jpg
 title: Beijing
-subtitle: Renmin University
+subtitle: Renmin University of China
 description: "July 3 to July 14, 2023"
 link: beijing
 year: 2023
