--- a/_data/2023/beijing/hero.yml
+++ b/_data/2023/beijing/hero.yml
@@ -1,2 +1,2 @@
-header_2: "July 3 to July 14, 2023 | Renmin University"
+header_2: "July 3 to July 14, 2023 | Renmin University of China"
 location: "SICSS-Beijing"
