--- a/_data/2023/paris/teaching_assistants.yml
+++ b/_data/2023/paris/teaching_assistants.yml
@@ -5,6 +5,6 @@
   
 - name: Gaston Vermersch
   image: /assets/images/gaston_vermersch.jpg
-  bio: Gaston Vermersch is a research assistant of Étienne Ollion at CREST. He holds an M.Sc. in quantitative economics from the Ecole Normale Supérieure de Lyon and is achieving an M.Sc. in computational social sciences at ENSAE. He wishes to learn new digital methods, complementary to econometrics, to analyze various socio-economic data.
+  bio: Gaston Vermersch holds an M.Sc. in quantitative economics from the Ecole Normale Supérieure de Lyon and is currently completing an M.Sc. in computational social sciences at ENSAE. He combines digital methods and econometrics to investigate various socio-economic topics.
   website:
   
