--- a/_data/2023/howard-mathematica/people.yml
+++ b/_data/2023/howard-mathematica/people.yml
@@ -72,6 +72,17 @@ roundtable discussions:
 
 lunchtime talks:
   title: Bite-Sized Lunchtime Talks
+  people:
+  
+    - name: The Data Nutrition Project
+        image: /assets/images/DataNutrition2.png
+        bio: "Our belief is that deeper transparency into dataset health can lead to better data decisions, which in turn lead to better AI. Founded in 2018 through the Assembly Fellowship, The Data Nutrition Project takes inspiration from nutritional labels on food, aiming to build labels that highlight the key ingredients in a dataset such as meta-data and populations, as well as unique or anomalous features regarding distributions, missing data, and comparisons to other ‘ground truth’ datasets."      
+        website: https://datanutrition.org/ 
+        
+    - name: vary CSS
+      image: /assets/images/VaryCSS.png
+      bio: "Computational Social Science is an exciting new field of research, and we think it should be diverse and inclusive as it grows. To this end, we provide links to resources, which are intended to support new and emerging CSS scholars currently underrepresented in the field. We also maintain a database of these scholars, which can be used for collaboration and networking, or for finding new voices to speak at conferences, on panels, and in workshop tutorials. These resources are compiled and updated by the CSS community."
+      website: http://varycss.org/
 
 
 participants: 
