--- a/_data/2023/nyu-shanghai/faculty.yml
+++ b/_data/2023/nyu-shanghai/faculty.yml
@@ -1,5 +1,5 @@
 - name: "Xiaogang Wu"
-  image: /assets/images/xiaogang_wu.png
+  image: /assets/images/xiaogang_wu.jpg
   bio: "Xiaogang Wu is Yufeng Global Professor of Social Science, the founding Director of the Center for Applied Social and Economic Research (CASER) at NYU Shanghai, and Professor of Sociology at New York University. He received his Ph.D. in sociology from UCLA  and has taught in the Hong Kong University of Science and Technology for 17 years before he joined NYU Shanghai in 2020. One of the CASER's focal areas of research is computational social science. His own research interests include social stratification and mobility, education, urban sociology, survey and quantitative methods."
   website: https://shanghai.nyu.edu/academics/faculty/directory/xiaogang-wu
 
