--- a/_data/2023/nyu-shanghai/faculty.yml
+++ b/_data/2023/nyu-shanghai/faculty.yml
@@ -6,7 +6,7 @@
 - name: "Yongjun Zhang"
   image: /assets/images/yongjun_zhang.jpg
   bio: "Yongjun Zhang is an Assistant Professor of sociology and institute for advanced computational science at Stony Brook University. Dr. Zhang's work combines statistical, network, and computational methods with big data to study social, political, and organizational behavior in the US and the globe. His current projects focus mainly on understanding human mobility, segregation, and polarization using near-population voter and consumer records, social media texts and images, and large-scale GPS data. He received his Ph.D. in sociology from the University of Arizona."
-  website: yongjunzhang.com
+  website: https://yongjunzhang.com
 
 - name: "Yongen Shi"
   image: /assets/images/yongren_shi.png
