--- a/_data/2023/howard-mathematica/people.yml
+++ b/_data/2023/howard-mathematica/people.yml
@@ -40,6 +40,16 @@ closing:
 
 speakers: 
   title: Guest Speakers
+  people:
+    - name: Deen Freelon, Ph.D.
+      image: /assets/images/Deen_Freelon.jpg
+      bio: "Deen Freelon is an associate professor at the UNC Hussman School of Journalism and Media at the University of North Carolina and a principal researcher at the Center for Information, Technology, and Public Life (CITAP). His theoretical interests address how ordinary citizens use social media and other digital communication technologies for political purposes, paying particular attention to how identity characteristics (e.g. race, gender, ideology) influence these uses. Methodologically, he is interested in how computational research techniques can be used to answer some of the most fundamental questions of communication science. Freelon has worked at the forefront of political communication and computational social science for over a decade, coauthoring some of the first communication studies to apply computational methods to social media data. Computer programming lies at the heart of his research practice, which generates novel tools (and sometimes methods) to answer questions existing approaches cannot address. He developed his first research tool, ReCal, as part of his master’s thesis, and it has since been used by tens of thousands of researchers worldwide. His scholarship has been financially supported by grantmakers including the U.S. Institute of Peace, the Spencer Foundation, the Knight Foundation, and the Hewlett Foundation; and published in top-tier journals including Nature, Science, and the Proceedings of the National Academy of Sciences. Freelon earned his Ph.D. from the University of Washington in 2012 and formerly taught at American University in Washington, D.C."
+      website: http://hussman.unc.edu/directory/faculty/deen-freelon
+   
+    - name: Imani N. S. Munyaka, Ph.D.
+      image: /assets/images/Imani_Munyaka.jpeg
+      bio: "Imani Munyaka is an Assistant Professor at the University of California, San Diego in the Computer Science and Engineering department. Her research focuses on social equity in the areas of security, privacy and usability. She is an alum of SICSS-H/M 2022."
+      website: https://www.imanimunyaka.com/
 
 
 Praxis to power:
