--- a/_data/2023/korea/hero.yml
+++ b/_data/2023/korea/hero.yml
@@ -1,2 +1,2 @@
-header_2: "July 3 to 12, 2023 | KAIST (Korea Advanced Institute of Science and Technology)"
+header_2: "July 3 to 12, 2023 | Korea Advanced Institute of Science and Technology (KAIST), KDI School of Public Policy and Management, and Chungnam National University"
 location: "SICSS-Korea"
