--- a/_data/2023/ndsu/location.yml
+++ b/_data/2023/ndsu/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/ndsu.jpg
+image: /assets/images/ndsu1.jpeg
 title: NDSU
 subtitle: Fargo, North Dakota
 description: "June 19 to June 29, 2023"
