--- a/_data/2023/korea/location.yml
+++ b/_data/2023/korea/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/korea.jpg
 title: Korea
-subtitle: KAIST (Korea Advanced Institute of Science and Technology)
+subtitle: Korea Advanced Institute of Science and Technology (KAIST)
 description: "July 3 to 12, 2023"
 link: korea
 year: 2023
