--- a/_data/2023/odissei/location.yml
+++ b/_data/2023/odissei/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/odissei-rotterdam.jpg
 title: ODISSEI
-subtitle: Erasmus University Rotterdam
+subtitle: Rotterdam, Netherlands 
 description: "June 19 to June 30, 2023"
 link: odissei
 year: 2023
