--- a/_data/2023/johannesburg/location.yml
+++ b/_data/2023/johannesburg/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/jias_johannesburg.jpg
 title: Johannesburg
-subtitle: JIAS
+subtitle: Johannesburg Institute for Advanced Study (JIAS)
 description: "Dates TBD, 2023"
 link: johannesburg
 year: 2023
