--- a/_data/2023/penn/location.yml
+++ b/_data/2023/penn/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/penn.jpg
 title: Penn
-subtitle: University of Pennsylvania
+subtitle: Philadelphia, PA
 description: "June 14 to June 25, 2023"
 link: penn
 year: 2023
