--- a/_data/2023/istanbul/faculty.yml
+++ b/_data/2023/istanbul/faculty.yml
@@ -1,1 +1,24 @@
-- name: 
+- name: Akın Ünver
+  image: /2019/istanbul/images/akin_unver.jpg
+  bio: “Akin Unver is an associate professor of International Relations at Ozyegin University, specializing in conflict research, computational methods and digital crisis communication. He is a fellow of Carnegie Endowment's Digital Democracy Network and serves as a member of TikTok's MENA-T Security Advisory Council. Previously he served as a Research Associate at the Center for Technology and Global Affairs, Oxford University and a Senior Research Fellow at GUARD (Global Urban Analytics for Resilient Defence) at the Alan Turing Institute. He is the author of ‘Defining Turkey’s Kurdish Question: Discourse and Politics Since 1990’ (Routledge Series in Middle Eastern Politics).”
+  website: https://www.akinunver.org/
+
+- name: Merih Angın
+  image: /assets/images/MerihAngin.jpg
+  bio: "Merih Angın is an Assistant Professor at the International Relations Department of Koç University. Previously, she was a Postdoctoral Fellow at the Weatherhead Center for International Affairs of Harvard University, a postdoctoral research fellow at the Blavatnik School of Government of the University of Oxford, and a visiting scholar at the Mortara Center for International Studies of the Edmund A. Walsh School of Foreign Service at Georgetown University. Dr. Angın holds a PhD degree in International Relations/Political Science from the Graduate Institute of International and Development Studies (IHEID), an M.Sc. degree in International Relations from METU, and a Bachelor’s degree in Economics from Bilkent University. Her research interests lie in the areas of international political economy, international organizations, international development, international financial institutions, investment arbitration, political economy of privatization, migration, quantitative methods, agent-based modelling, machine learning, artificial intelligence and computational social sciences. Her research on IMF lending has recently been awarded the European Commission’s Marie Skłodowska-Curie Actions Individual Fellowship, as well as the Scientific and Technological Research Council of Turkey’s International Fellowship for Outstanding Researchers for 3 years."
+  website: 
+
+- name: Onur Varol
+  image: /assets/images/OnurVarol.jpg
+  bio: "Dr. Onur Varol is an Assistant Professor at the Sabanci University Faculty of Engineering and Natural Sciences and Principal Investigator at the VIRAL Lab. His research focuses on developing techniques to analyze online behaviors to improve individual well-being and address societal problems using online data. Prior to joining Sabanci University, he was a postdoctoral researcher at Northeastern University at the Center for Complex Network Research. He completed his PhD in Informatics at Indiana University, Bloomington (USA). His thesis focuses on the analysis of manipulation and threats on social media and he was awarded the 2018 University Distinguished Ph.D. Dissertation Award. He has developed a system called Botometer to detect social bots on Twitter and his team ranked top 3 worldwide at the 2015 DARPA Bot Detection Challenge. Efforts on studying social bots yield publications on prestigious venues such as International Conference of Web and Social Media (ICWSM), Nature Communications, World Wide Web (WWW) conference, and Communications of the ACM."
+  website: 
+  
+- name: Erdem Yörük
+  image: /assets/images/ErdemYörük.jpg
+  bio:  "Erdem Yörük is an Associate Professor in the Department of Sociology at Koç University and an Associate Member in the Department of Social Policy and Intervention at University of Oxford.
+         He is the principal investigator of the ERC-funded project Emerging Welfare [The New Politics of Welfare Towards an 'Emerging Markets' Welfare State Regime] (emw.ku.edu.tr). He is also a member of Young Academy of Europe and an associate editor of EuropeanReview.
+         He holds a PhD from the Department of Sociology at Johns HopkinsUniversity (2012), an MA in Sociology and a BSc in Electrical and Electronics Engineering from Boğaziçi University.
+         His work focuses on social welfare and social policy, social movements, political sociology, and comparative and historical sociology. His work has been supported by the National Science Foundation (NSF), Ford Foundation, European Commission Marie Curie CIG, European Research Council, European Commission Twinning Action Grants (socialcomquant.ku.edu.tr), and the Science Academy of Turkey BAGEP.
+         His articles have appeared in World Development, Governance, Politics & Society, New Left Review, Current Sociology, South Atlantic Quarterly, International Journal of Communication, Social Policy and Administration, Social Indicators Research, among others. His book, ‘The Politics of the Welfare State in Turkey’ is forthcoming from the University of Michigan Press."
+  website: https://emw.ku.edu.tr/?staff=erdem-yoruk
+  
