--- a/_data/2023/istanbul/people.yml
+++ b/_data/2023/istanbul/people.yml
@@ -26,8 +26,8 @@ organizers:
         bio:  "Başak Taraktaş is an Assistant Professor of Political Science at Bogazici University. She received her PhD in political science from the University of Pennsylvania in 2016. Before coming to Bogazici, She worked as a postdoc at Northwestern’s Buffett Institute for Global Affairs for two years and as a research analyst at FutureMap. Her research centers on collective action and opinion dynamics. Much of her work is set in the contexts of regimes, and contentious politics, where she combine computational methods (such as, agent-based models, network analysis, and text analysis) and qualitative research to unpack the effect of ideology and ideational beliefs on cooperation. She is particularly interested in adaptations of complexity theory and dynamical systems in social sciences."
         website: https://basaktaraktas.com/
 
-organizers:
-  title: Bootcamp Instructor
+instructors:
+  title: Bootcamp Instructor and Administrative Support
   people:
         - name: Yunus Emre Tapan
         image: /assets/images/YEmreTapan.JPG
