--- a/_data/2023/istanbul/people.yml
+++ b/_data/2023/istanbul/people.yml
@@ -27,7 +27,7 @@ organizers:
         website: https://basaktaraktas.com/
 
 instructors:
-  title: Bootcamp Instructor and Administrative Support
+  title: Bootcamp Instructor and Organizer
   people:
         - name: Yunus Emre Tapan
         image: /assets/images/YEmreTapan.JPG
