--- a/_data/2023/istanbul/people.yml
+++ b/_data/2023/istanbul/people.yml
@@ -3,7 +3,7 @@ organizers:
   people:
       - name: Akın Ünver
         image: /2019/istanbul/images/akin_unver.jpg
-        bio: “Akin Unver is an associate professor of International Relations at Ozyegin University, specializing in conflict research, computational methods and digital crisis communication. He is a fellow of Carnegie Endowment's Digital Democracy Network and serves as a member of TikTok's MENA-T Security Advisory Council. Previously he served as a Research Associate at the Center for Technology and Global Affairs, Oxford University and a Senior Research Fellow at GUARD (Global Urban Analytics for Resilient Defence) at the Alan Turing Institute. He is the author of ‘Defining Turkey’s Kurdish Question: Discourse and Politics Since 1990’ (Routledge Series in Middle Eastern Politics).”
+        bio: "Akin Unver is an associate professor of International Relations at Ozyegin University, specializing in conflict research, computational methods and digital crisis communication. He is a fellow of Carnegie Endowment's Digital Democracy Network and serves as a member of TikTok's MENA-T Security Advisory Council. Previously he served as a Research Associate at the Center for Technology and Global Affairs, Oxford University and a Senior Research Fellow at GUARD (Global Urban Analytics for Resilient Defence) at the Alan Turing Institute. He is the author of ‘Defining Turkey’s Kurdish Question: Discourse and Politics Since 1990’ (Routledge Series in Middle Eastern Politics)."
         website: https://www.akinunver.org/
       - name: Merih Angın
         image: /assets/images/MerihAngin.jpg
@@ -31,5 +31,5 @@ instructors:
   people:
         - name: Yunus Emre Tapan
         image: /assets/images/YEmreTapan.JPG
-        bio: “Yunus Emre Tapan, a graduate of SICSS-Helsinki-18, is a Ph.D. Student in Political Science at Northeastern University. He studied Economics in his B.A. at Bogazici University and Middle East Studies in his M.Sc. at METU. His research sits at the intersection of data science and social sciences. He specializes in social network analysis and computational text analysis to study online extremist communities and non-state actors with a particular focus on how they radicalize. He is a graduate of ICPSR Summer Program in 2020 as one of the recipients of the Scholarship for Political Science Research.”
+        bio: "Yunus Emre Tapan, a graduate of SICSS-Helsinki-18, is a Ph.D. Student in Political Science at Northeastern University. He studied Economics in his B.A. at Bogazici University and Middle East Studies in his M.Sc. at METU. His research sits at the intersection of data science and social sciences. He specializes in social network analysis and computational text analysis to study online extremist communities and non-state actors with a particular focus on how they radicalize. He is a graduate of ICPSR Summer Program in 2020 as one of the recipients of the Scholarship for Political Science Research."
         website: https://yemretapan.netlify.app/
